--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 header {
-    background-color: #e9dcd1;
+    background-color: #9c007a;
     width: 100vh;
     grid-area: header;
 }
